Adicionada autenticacao via JWT e Spring Security

--- a/todo-list-api/src/main/resources/application.properties
+++ b/todo-list-api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=todo-list-api
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/todoList_api
+spring.datasource.username = postgres
+spring.datasource.password = postgre123
+
+spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation = true
+
+jwt.header = Authorization
+jwt.secret = my-very-secret-key
